--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,17 +40,20 @@ footer {
   height: 2.5rem;
   justify-content: center;
   display: flex;
+  bottom: 0;
 }
 
 footer p {
   color: #ccc;
+  bottom: 0;
 }
 .note {
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
-  width: 240px;
+  min-width: 320px;
+  max-width: min-content;
   margin: 16px;
   float: left;
 }
@@ -76,6 +79,10 @@ footer p {
   border-radius: 50%;
   cursor: pointer;
   outline: none;
+}
+
+.createarea{
+  height: auto;
 }
 
 form.create-note {
